// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'component-whitespacing' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`'component-whitespacing' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/conformance-reference.tsx",
      6,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "/virtual/conformance-reference.tsx",
      15,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/conformance-reference.tsx",
      24,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/conformance-reference.tsx",
      33,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`'component-whitespacing' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/Conformance.svelte",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "DFZbAv",
    "message": "Before{value}After",
    "origin": [
      "/virtual/Conformance.svelte",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/txFeF",
    "message": "Before {value} After",
    "origin": [
      "/virtual/Conformance.svelte",
      15,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "INRnBm",
    "message": " Before  {value}  After ",
    "origin": [
      "/virtual/Conformance.svelte",
      18,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
]
`;

exports[`'deep-rich-text-trans' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J+8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`'deep-rich-text-trans' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J+8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "/virtual/conformance-reference.tsx",
      13,
      2,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`'deep-rich-text-trans' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "zt7J+8",
    "message": "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    "origin": [
      "/virtual/Conformance.svelte",
      9,
      0,
    ],
    "placeholders": {
      "action": "action",
      "count": "count",
      "name": "name",
    },
  },
]
`;

exports[`'exact-number-component' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a+Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "Conformance.astro?extract-component",
      4,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "Conformance.astro?extract-component",
      4,
      0,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`'exact-number-component' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a+Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      12,
      4,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      21,
      4,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`'exact-number-component' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "a+Xhin",
    "message": "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
    "origin": [
      "/virtual/Conformance.svelte",
      8,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "gM41pk",
    "message": "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
    "origin": [
      "/virtual/Conformance.svelte",
      14,
      0,
    ],
    "placeholders": {
      "rank": "rank",
    },
  },
]
`;

exports[`'nested-icu-core' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4/G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "Conformance.astro?frontmatter",
      7,
      19,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'nested-icu-core' > official core extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4/G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "/virtual/conformance-reference.ts",
      4,
      0,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'nested-icu-core' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "K9g4/G",
    "message": "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    "origin": [
      "/virtual/Conformance.svelte",
      8,
      0,
    ],
    "placeholders": {
      "count": "count",
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'rich-text-trans' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9/omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`'rich-text-trans' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9/omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "/virtual/conformance-reference.tsx",
      9,
      2,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`'rich-text-trans' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "9/omjw",
    "message": "Hello <0>{name}</0>.",
    "origin": [
      "/virtual/Conformance.svelte",
      7,
      0,
    ],
    "placeholders": {
      "name": "name",
    },
  },
]
`;

exports[`'trans-with-deeply-nested-component-icu' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "Conformance.astro?extract-expression",
      6,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/uwo4+",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "Conformance.astro?extract-expression",
      6,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "Conformance.astro?extract-expression",
      6,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "Conformance.astro?extract-component",
      6,
      0,
    ],
    "placeholders": {
      "0": "_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "1": "_i18n._(
    /*i18n*/
    {
      id: "/uwo4+",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "2": "_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      11,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/uwo4+",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      25,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      39,
      13,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "urSMCa",
    "message": "{count, plural, =0 {{0}} =2 {{1}} other {{2}}}",
    "origin": [
      "Conformance.astro?extract-component",
      6,
      0,
    ],
    "placeholders": {
      "0": "_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "1": "_i18n._(
    /*i18n*/
    {
      id: "/uwo4+",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "2": "_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      8,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/uwo4+",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      22,
      10,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "Conformance.astro?extract-component",
      36,
      13,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'trans-with-deeply-nested-component-icu' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "/virtual/conformance-reference.tsx",
      14,
      2,
    ],
    "placeholders": {
      "0": "_i18n._(
      /*i18n*/
      {
        id: "Ro3jDG",
        message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "1": "_i18n._(
      /*i18n*/
      {
        id: "/uwo4+",
        message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "2": "_i18n._(
      /*i18n*/
      {
        id: "OsAInm",
        message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      20,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/uwo4+",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      30,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      40,
      6,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'trans-with-deeply-nested-component-icu' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "Y5Pnrw",
    "message": "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    "origin": [
      "/virtual/Conformance.svelte",
      14,
      0,
    ],
    "placeholders": {
      "0": "_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "1": "_i18n._(
    /*i18n*/
    {
      id: "/uwo4+",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "2": "_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    })",
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "Ro3jDG",
    "message": "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
    "origin": [
      "/virtual/Conformance.svelte",
      19,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "/uwo4+",
    "message": "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
    "origin": [
      "/virtual/Conformance.svelte",
      33,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "OsAInm",
    "message": "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
    "origin": [
      "/virtual/Conformance.svelte",
      47,
      0,
    ],
    "placeholders": {
      "rank": "rank",
      "role": "role",
    },
  },
]
`;

exports[`'trans-with-plural' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "Conformance.astro?extract-component",
      4,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "42f5OD",
    "message": "{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}",
    "origin": [
      "Conformance.astro?extract-component",
      4,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`'trans-with-plural' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "/virtual/conformance-reference.tsx",
      9,
      2,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`'trans-with-plural' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "BWlbIC",
    "message": "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    "origin": [
      "/virtual/Conformance.svelte",
      7,
      0,
    ],
    "placeholders": {
      "count": "count",
    },
  },
]
`;

exports[`'with-id-context-comment-component' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-component",
      3,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`'with-id-context-comment-component' > official react extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      7,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      16,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      25,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.tsx",
      35,
      4,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.tsx",
      46,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.tsx",
      52,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.tsx",
      58,
      4,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.tsx",
      65,
      4,
    ],
    "placeholders": {},
  },
]
`;

exports[`'with-id-context-comment-component' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      7,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      8,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      9,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      10,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      11,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      13,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      14,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      15,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      16,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      17,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`'with-id-context-comment-core' > astro extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "Conformance.astro?extract-expression",
      3,
      2,
    ],
    "placeholders": {},
  },
]
`;

exports[`'with-id-context-comment-core' > official core extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.ts",
      5,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.ts",
      14,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.ts",
      23,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.ts",
      32,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/conformance-reference.ts",
      42,
      0,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.ts",
      52,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.ts",
      58,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.ts",
      64,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.ts",
      70,
      0,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/conformance-reference.ts",
      77,
      0,
    ],
    "placeholders": {},
  },
]
`;

exports[`'with-id-context-comment-core' > svelte extraction 1`] = `
[
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      7,
      13,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      8,
      13,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "with-interpolation-with-id",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      11,
      12,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "bVvypv",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      15,
      12,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "dBHrOY",
    "message": "Message with interpolation: {value}",
    "origin": [
      "/virtual/Conformance.svelte",
      19,
      12,
    ],
    "placeholders": {
      "value": "value",
    },
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      24,
      13,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      25,
      13,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": undefined,
    "id": "no-interpolation-with-id",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      28,
      12,
    ],
    "placeholders": {},
  },
  {
    "comment": undefined,
    "context": "This is a context",
    "id": "SSpjjA",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      32,
      12,
    ],
    "placeholders": {},
  },
  {
    "comment": "This is a comment",
    "context": undefined,
    "id": "YYBbrl",
    "message": "Message without interpolation",
    "origin": [
      "/virtual/Conformance.svelte",
      36,
      12,
    ],
    "placeholders": {},
  },
]
`;
